--- a/index.css
+++ b/index.css
@@ -4,3 +4,116 @@
   box-sizing: border-box;
 }
 
+html, body, #home {
+  height: 100%;
+}
+
+body {
+  background: url(/imagens/capa.png), url(/imagens/ruido.png),linear-gradient(50deg, #ff3169, #7c26f8);
+  background-attachment: fixed;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+nav.navbar-transparent {
+  background: rgba(0,0,0,0.6);
+  padding: 15px 0;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #9bf0e1;
+}
+
+.navbar-light .navbar-toggler {
+  color: rgba(255,255,255,0.5);
+  border-color: rgba(255,255,255,0.5);
+}
+
+.divisor {
+  width: 1px;
+  background: white;
+  margin: 12px 15px;
+}
+
+.capa {
+  text-align: center;
+}
+
+.btn-custom {
+  color: white;
+  border-radius: 500px;
+  text-transform: uppercase;
+  transition: background 0.4s, color 0.4s;
+  padding: 10px 20px;
+  font-weight: 600;
+}
+
+.btn-roxo {
+  background: #7c25f8;
+}
+
+.btn-roxo:hover {
+  background: #6207e3;
+  color: white;
+}
+
+.btn-branco {
+  border: 2px solid white;
+}
+
+.btn-branco:hover {
+  background: white;
+  color: black;
+}
+
+h1 {
+  font-weight: 900;
+  letter-spacing: -0.05em;
+  margin-bottom: 50px;
+  color: white;
+  font-size: 6em;
+}
+
+/*Responsive*/
+@media (max-width:575.98px) {
+
+}
+
+@media (max-width:576px) and (max-width:767.98px) {
+
+  h1 {
+    font-size: 3em;
+  }
+  
+}
+
+@media (max-width:768px) and (max-width:991.98px) {
+
+  h1 {
+    font-size: 4em;
+  }
+
+  .btn-custom {
+    margin: 10px 15px;
+  }
+  
+}
+
+@media (max-width:992px) and (max-width:1199.98px) {
+
+  h1 {
+    font-size: 4em;
+  }
+  
+}
+
+@media (max-width:1200px) {
+
+  h1 {
+    font-size: 3em;
+  }
+
+}
