--- a/index.css
+++ b/index.css
@@ -61,12 +61,76 @@ nav.navbar-transparent {
 }
 
 .btn-branco {
-  border: 2px solid white;
+  border: 3px solid white;
 }
 
 .btn-branco:hover {
   background: white;
   color: black;
+}
+
+.caixa {
+  padding: 40px 0;
+}
+
+#servicos {
+  background: white;
+}
+
+#recursos {
+  color: white;
+}
+
+#servicos h2, h3 {
+  color: #7c25f8;
+}
+
+#recursos h3 {
+  color: #9bf0e1;
+}
+
+#recursos h2 {
+  color: white;
+}
+
+.albuns {
+  padding: 10px 0;
+}
+
+.rotacionar {
+  transform: rotate(25deg);
+  padding-left: 80px;
+}
+
+footer {
+  background: black;
+  padding: 50px 0 20px 0;
+  position: relative;
+}
+
+footer h4 {
+  color: #919496;
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+  color: white;
+  font-size: 0.8em;
+}
+
+footer .navbar-nav a:hover {
+  color: #9bf0e1;
+  text-decoration: none;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+}
+
+footer ul li {
+  margin: 0 5px;
 }
 
 h1 {
@@ -77,8 +141,24 @@ h1 {
   font-size: 6em;
 }
 
+h2 {
+  font-size: 3em;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+}
+
+h3 {
+  font-size: 2em;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+}
+
 /*Responsive*/
 @media (max-width:575.98px) {
+
+  .btn-custom {
+    margin: 10px 15px;
+  }
 
 }
 
@@ -86,6 +166,11 @@ h1 {
 
   h1 {
     font-size: 3em;
+  }
+
+  .btn-custom {
+    margin: 10px 15px;
+    font-size: 1em;
   }
   
 }
