--- a/index.css
+++ b/index.css
@@ -69,6 +69,11 @@ nav.navbar-transparent {
   color: black;
 }
 
+.carousel-control-prev .carousel-control-next {
+  width: 5%;
+  background: #f2f2f2;
+}
+
 .caixa {
   padding: 40px 0;
 }
