--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html, body, #home {
 }
 
 body {
-  background: url(/imagens/capa.png), url(/imagens/ruido.png),linear-gradient(50deg, #ff3169, #7c26f8);
+  background: url(./imagens/capa.png), url(./imagens/ruido.png),linear-gradient(50deg, #ff3169, #7c26f8);
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
 }
