--- a/index.css
+++ b/index.css
@@ -4,18 +4,21 @@
   box-sizing: border-box;
 }
 
-html, body, #home {
+html,
+body,
+#home {
   height: 100%;
 }
 
 body {
-  background: url(./imagens/capa.png), url(./imagens/ruido.png),linear-gradient(50deg, #ff3169, #7c26f8);
+  background: url(./imagens/capa.png), url(./imagens/ruido.png),
+    linear-gradient(50deg, #ff3169, #7c26f8);
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
 }
 
 nav.navbar-transparent {
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
   padding: 15px 0;
 }
 
@@ -28,8 +31,8 @@ nav.navbar-transparent {
 }
 
 .navbar-light .navbar-toggler {
-  color: rgba(255,255,255,0.5);
-  border-color: rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
+  border-color: rgba(255, 255, 255, 0.5);
 }
 
 .divisor {
@@ -86,7 +89,8 @@ nav.navbar-transparent {
   color: white;
 }
 
-#servicos h2, h3 {
+#servicos h2,
+h3 {
   color: #7c25f8;
 }
 
@@ -159,16 +163,13 @@ h3 {
 }
 
 /*Responsive*/
-@media (max-width:575.98px) {
-
+@media (max-width: 575.98px) {
   .btn-custom {
     margin: 10px 15px;
   }
-
 }
 
-@media (max-width:576px) and (max-width:767.98px) {
-
+@media (max-width: 576px) and (max-width: 767.98px) {
   h1 {
     font-size: 3em;
   }
@@ -177,11 +178,9 @@ h3 {
     margin: 10px 15px;
     font-size: 1em;
   }
-  
 }
 
-@media (max-width:768px) and (max-width:991.98px) {
-
+@media (max-width: 768px) and (max-width: 991.98px) {
   h1 {
     font-size: 4em;
   }
@@ -189,21 +188,25 @@ h3 {
   .btn-custom {
     margin: 10px 15px;
   }
-  
+
+  .sLogo {
+    padding-right: 0;
+    margin-bottom: 20px;
+  }
 }
 
-@media (max-width:992px) and (max-width:1199.98px) {
-
+@media (max-width: 992px) and (max-width: 1199.98px) {
   h1 {
     font-size: 4em;
   }
-  
 }
 
-@media (max-width:1200px) {
-
+@media (max-width: 1200px) {
   h1 {
     font-size: 3em;
   }
 
+  .sLogo {
+    padding-right: 30px;
+  }
 }
